metadata/force-app/main/default/objects/CustomName_HGMjb__c/CustomName_HGMjb__c.object-meta.xml
<CustomObject>
    <description>Description_uMTgZ</description>
    <label>CustomLabel_BlbxZ</label>
    <nameField>
        <label>CustomLabel_BlbxZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BlbxZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>