metadata/force-app/main/default/objects/CustomName_HGMjb__c/fields/CustomField_acNwv__c.field-meta.xml
<CustomField>
    <fullName>CustomField_acNwv__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldQacel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>