metadata/force-app/main/default/objects/CustomName_HGMjb__c/fields/CustomField_ClMbw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ClMbw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjoJkf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>